Setting grid max on homepage to be 3 wide. Fixing heading font bleeding into project paragraph in the aero-structural modeling page. Added senior design project page for future and to test the new 3 column max display on the homepage.

--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,12 @@ header {
     margin: 0 auto;
 }
 
+@media (min-width: 900px) {
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 .project-tile {
     background-color: #1c1c1c;
     border: 2px solid #333;
